Visual fixes
Make headings easier to read by improving contrast (make them darker).

Fix jumping content between navigation, if one of pages doesn't have scrollbar. Issue video: http://take.ms/mjy69

Remove double scrolling for demo page. There are still second scrollbar, but it doesn't scroll page now.

--- a/src/index.global.css
+++ b/src/index.global.css
@@ -8,6 +8,7 @@
 html {
   box-sizing: border-box;
   min-height: 100%;
+  overflow-y: scroll;
 }
 
 *,
